SUBDIRS = src include test

EXTRA_DIST = reconfigure.sh \
             win/README \
             win/Makefile.in \
             win/configure.bat \
             graphics/README \
             graphics/gnuplot.sh \
             graphics/gnuplot.bat \
             graphics/gnuplot.plt \
             graphics/gnuplot2.plt \
             doc/Makefile \
             doc/double-double.eps \
             doc/lis-ug-en.tex \
             doc/lis-ug-en.pdf \
             doc/lis-ug-ja.tex \
             doc/lis-ug-ja.pdf \
             doc/irises_korin.eps \
             doc/storage01.eps \
             doc/storage01_mpi.eps \
             doc/storage02.eps \
             doc/storage02_mpi.eps \
             doc/storage03.eps \
             doc/storage03_mpi.eps \
             doc/storage04.eps \
             doc/storage04_mpi.eps \
             doc/storage04_omp.eps \
             doc/storage05.eps \
             doc/storage05_mpi.eps \
             doc/storage06.eps \
             doc/storage06_mpi.eps \
             doc/storage06_omp.eps \
             doc/storage07.eps \
             doc/storage07_mpi.eps \
             doc/storage08.eps \
             doc/storage08_mpi.eps \
             doc/storage09.eps \
             doc/storage09_mpi.eps \
             doc/storage10.eps \
             doc/storage10_mpi.eps \
             doc/storage11.eps \
             doc/storage11_mpi.eps \
             doc/man/man1/lsolve.1 \
             doc/man/man1/esolve.1 \
             doc/man/man1/spmvtest1.1 \
             doc/man/man1/spmvtest2.1 \
             doc/man/man1/spmvtest3.1 \
             doc/man/man1/spmvtest4.1 \
             doc/man/man1/spmvtest5.1 \
             doc/man/man3/lis.3 \
             doc/man/man3/lis_esolve.3 \
             doc/man/man3/lis_esolver_create.3 \
             doc/man/man3/lis_esolver_destroy.3 \
             doc/man/man3/lis_esolver_get_esolver.3 \
             doc/man/man3/lis_esolver_get_esolvername.3 \
             doc/man/man3/lis_esolver_get_evalues.3 \
             doc/man/man3/lis_esolver_get_evectors.3 \
             doc/man/man3/lis_esolver_get_iters.3 \
             doc/man/man3/lis_esolver_get_itersex.3 \
             doc/man/man3/lis_esolver_get_residualnorm.3 \
             doc/man/man3/lis_esolver_get_rhistory.3 \
             doc/man/man3/lis_esolver_get_status.3 \
             doc/man/man3/lis_esolver_get_time.3 \
             doc/man/man3/lis_esolver_get_timeex.3 \
             doc/man/man3/lis_esolver_set_option.3 \
             doc/man/man3/lis_esolver_set_optionC.3 \
             doc/man/man3/lis_finalize.3 \
             doc/man/man3/lis_initialize.3 \
             doc/man/man3/lis_input.3 \
             doc/man/man3/lis_input_matrix.3 \
             doc/man/man3/lis_input_vector.3 \
             doc/man/man3/lis_matrix_assemble.3 \
             doc/man/man3/lis_matrix_convert.3 \
             doc/man/man3/lis_matrix_copy.3 \
             doc/man/man3/lis_matrix_create.3 \
             doc/man/man3/lis_matrix_destroy.3 \
             doc/man/man3/lis_matrix_duplicate.3 \
             doc/man/man3/lis_matrix_get_diagonal.3 \
             doc/man/man3/lis_matrix_get_range.3 \
             doc/man/man3/lis_matrix_get_size.3 \
             doc/man/man3/lis_matrix_get_type.3 \
             doc/man/man3/lis_matrix_malloc.3 \
             doc/man/man3/lis_matrix_scaling.3 \
             doc/man/man3/lis_matrix_set_blocksize.3 \
             doc/man/man3/lis_matrix_set_bsc.3 \
             doc/man/man3/lis_matrix_set_bsr.3 \
             doc/man/man3/lis_matrix_set_coo.3 \
             doc/man/man3/lis_matrix_set_csc.3 \
             doc/man/man3/lis_matrix_set_csr.3 \
             doc/man/man3/lis_matrix_set_dia.3 \
             doc/man/man3/lis_matrix_set_dns.3 \
             doc/man/man3/lis_matrix_set_ell.3 \
             doc/man/man3/lis_matrix_set_jad.3 \
             doc/man/man3/lis_matrix_set_msr.3 \
             doc/man/man3/lis_matrix_set_size.3 \
             doc/man/man3/lis_matrix_set_type.3 \
             doc/man/man3/lis_matrix_set_value.3 \
             doc/man/man3/lis_matrix_set_vbr.3 \
             doc/man/man3/lis_matvec.3 \
             doc/man/man3/lis_matvect.3 \
             doc/man/man3/lis_output.3 \
             doc/man/man3/lis_output_matrix.3 \
             doc/man/man3/lis_output_vector.3 \
             doc/man/man3/lis_solve.3 \
             doc/man/man3/lis_solve_kernel.3 \
             doc/man/man3/lis_solver_create.3 \
             doc/man/man3/lis_solver_destroy.3 \
             doc/man/man3/lis_solver_get_iters.3 \
             doc/man/man3/lis_solver_get_itersex.3 \
             doc/man/man3/lis_solver_get_precon.3 \
             doc/man/man3/lis_solver_get_preconname.3 \
             doc/man/man3/lis_solver_get_residualnorm.3 \
             doc/man/man3/lis_solver_get_rhistory.3 \
             doc/man/man3/lis_solver_get_solver.3 \
             doc/man/man3/lis_solver_get_solvername.3 \
             doc/man/man3/lis_solver_get_status.3 \
             doc/man/man3/lis_solver_get_time.3 \
             doc/man/man3/lis_solver_get_timeex.3 \
             doc/man/man3/lis_solver_set_option.3 \
             doc/man/man3/lis_solver_set_optionC.3 \
             doc/man/man3/lis_vector_axpy.3 \
             doc/man/man3/lis_vector_axpyz.3 \
             doc/man/man3/lis_vector_copy.3 \
             doc/man/man3/lis_vector_create.3 \
             doc/man/man3/lis_vector_destroy.3 \
             doc/man/man3/lis_vector_dot.3 \
             doc/man/man3/lis_vector_duplicate.3 \
             doc/man/man3/lis_vector_gather.3 \
             doc/man/man3/lis_vector_get_range.3 \
             doc/man/man3/lis_vector_get_size.3 \
             doc/man/man3/lis_vector_get_value.3 \
             doc/man/man3/lis_vector_get_values.3 \
             doc/man/man3/lis_vector_nrm1.3 \
             doc/man/man3/lis_vector_nrm2.3 \
             doc/man/man3/lis_vector_nrmi.3 \
             doc/man/man3/lis_vector_scale.3 \
             doc/man/man3/lis_vector_scatter.3 \
             doc/man/man3/lis_vector_set_all.3 \
             doc/man/man3/lis_vector_set_size.3 \
             doc/man/man3/lis_vector_set_value.3 \
             doc/man/man3/lis_vector_set_values.3 \
             doc/man/man3/lis_vector_xpay.3 \
             doc/man/man3/lis_wtime.3 \
             doc/man/man3/lis_esolve.3f \
             doc/man/man3/lis_esolver_create.3f \
             doc/man/man3/lis_esolver_destroy.3f \
             doc/man/man3/lis_esolver_get_esolver.3f \
             doc/man/man3/lis_esolver_get_esolvername.3f \
             doc/man/man3/lis_esolver_get_evalues.3f \
             doc/man/man3/lis_esolver_get_evectors.3f \
             doc/man/man3/lis_esolver_get_iters.3f \
             doc/man/man3/lis_esolver_get_itersex.3f \
             doc/man/man3/lis_esolver_get_residualnorm.3f \
             doc/man/man3/lis_esolver_get_rhistory.3f \
             doc/man/man3/lis_esolver_get_status.3f \
             doc/man/man3/lis_esolver_get_time.3f \
             doc/man/man3/lis_esolver_get_timeex.3f \
             doc/man/man3/lis_esolver_set_option.3f \
             doc/man/man3/lis_esolver_set_optionC.3f \
             doc/man/man3/lis_finalize.3f \
             doc/man/man3/lis_initialize.3f \
             doc/man/man3/lis_input.3f \
             doc/man/man3/lis_input_matrix.3f \
             doc/man/man3/lis_input_vector.3f \
             doc/man/man3/lis_matrix_assemble.3f \
             doc/man/man3/lis_matrix_convert.3f \
             doc/man/man3/lis_matrix_copy.3f \
             doc/man/man3/lis_matrix_create.3f \
             doc/man/man3/lis_matrix_destroy.3f \
             doc/man/man3/lis_matrix_duplicate.3f \
             doc/man/man3/lis_matrix_get_diagonal.3f \
             doc/man/man3/lis_matrix_get_range.3f \
             doc/man/man3/lis_matrix_get_size.3f \
             doc/man/man3/lis_matrix_get_type.3f \
             doc/man/man3/lis_matrix_malloc.3f \
             doc/man/man3/lis_matrix_scaling.3f \
             doc/man/man3/lis_matrix_set_blocksize.3f \
             doc/man/man3/lis_matrix_set_bsc.3f \
             doc/man/man3/lis_matrix_set_bsr.3f \
             doc/man/man3/lis_matrix_set_coo.3f \
             doc/man/man3/lis_matrix_set_csc.3f \
             doc/man/man3/lis_matrix_set_csr.3f \
             doc/man/man3/lis_matrix_set_dia.3f \
             doc/man/man3/lis_matrix_set_dns.3f \
             doc/man/man3/lis_matrix_set_ell.3f \
             doc/man/man3/lis_matrix_set_jad.3f \
             doc/man/man3/lis_matrix_set_msr.3f \
             doc/man/man3/lis_matrix_set_size.3f \
             doc/man/man3/lis_matrix_set_type.3f \
             doc/man/man3/lis_matrix_set_value.3f \
             doc/man/man3/lis_matrix_set_vbr.3f \
             doc/man/man3/lis_matvec.3f \
             doc/man/man3/lis_matvect.3f \
             doc/man/man3/lis_output.3f \
             doc/man/man3/lis_output_matrix.3f \
             doc/man/man3/lis_output_vector.3f \
             doc/man/man3/lis_solve.3f \
             doc/man/man3/lis_solve_kernel.3f \
             doc/man/man3/lis_solver_create.3f \
             doc/man/man3/lis_solver_destroy.3f \
             doc/man/man3/lis_solver_get_iters.3f \
             doc/man/man3/lis_solver_get_itersex.3f \
             doc/man/man3/lis_solver_get_precon.3f \
             doc/man/man3/lis_solver_get_preconname.3f \
             doc/man/man3/lis_solver_get_residualnorm.3f \
             doc/man/man3/lis_solver_get_rhistory.3f \
             doc/man/man3/lis_solver_get_solver.3f \
             doc/man/man3/lis_solver_get_solvername.3f \
             doc/man/man3/lis_solver_get_status.3f \
             doc/man/man3/lis_solver_get_time.3f \
             doc/man/man3/lis_solver_get_timeex.3f \
             doc/man/man3/lis_solver_set_option.3f \
             doc/man/man3/lis_solver_set_optionC.3f \
             doc/man/man3/lis_vector_axpy.3f \
             doc/man/man3/lis_vector_axpyz.3f \
             doc/man/man3/lis_vector_copy.3f \
             doc/man/man3/lis_vector_create.3f \
             doc/man/man3/lis_vector_destroy.3f \
             doc/man/man3/lis_vector_dot.3f \
             doc/man/man3/lis_vector_duplicate.3f \
             doc/man/man3/lis_vector_gather.3f \
             doc/man/man3/lis_vector_get_range.3f \
             doc/man/man3/lis_vector_get_size.3f \
             doc/man/man3/lis_vector_get_value.3f \
             doc/man/man3/lis_vector_get_values.3f \
             doc/man/man3/lis_vector_nrm1.3f \
             doc/man/man3/lis_vector_nrm2.3f \
             doc/man/man3/lis_vector_nrmi.3f \
             doc/man/man3/lis_vector_scale.3f \
             doc/man/man3/lis_vector_scatter.3f \
             doc/man/man3/lis_vector_set_all.3f \
             doc/man/man3/lis_vector_set_size.3f \
             doc/man/man3/lis_vector_set_value.3f \
             doc/man/man3/lis_vector_set_values.3f \
             doc/man/man3/lis_vector_xpay.3f \
             doc/man/man3/lis_wtime.3f

man_MANS =   doc/man/man1/lsolve.1 \
             doc/man/man1/esolve.1 \
             doc/man/man1/spmvtest1.1 \
             doc/man/man1/spmvtest2.1 \
             doc/man/man1/spmvtest3.1 \
             doc/man/man1/spmvtest4.1 \
             doc/man/man1/spmvtest5.1 \
             doc/man/man3/lis.3 \
             doc/man/man3/lis_esolve.3 \
             doc/man/man3/lis_esolver_create.3 \
             doc/man/man3/lis_esolver_destroy.3 \
             doc/man/man3/lis_esolver_get_esolver.3 \
             doc/man/man3/lis_esolver_get_esolvername.3 \
             doc/man/man3/lis_esolver_get_evalues.3 \
             doc/man/man3/lis_esolver_get_evectors.3 \
             doc/man/man3/lis_esolver_get_iters.3 \
             doc/man/man3/lis_esolver_get_itersex.3 \
             doc/man/man3/lis_esolver_get_residualnorm.3 \
             doc/man/man3/lis_esolver_get_rhistory.3 \
             doc/man/man3/lis_esolver_get_status.3 \
             doc/man/man3/lis_esolver_get_time.3 \
             doc/man/man3/lis_esolver_get_timeex.3 \
             doc/man/man3/lis_esolver_set_option.3 \
             doc/man/man3/lis_esolver_set_optionC.3 \
             doc/man/man3/lis_finalize.3 \
             doc/man/man3/lis_initialize.3 \
             doc/man/man3/lis_input.3 \
             doc/man/man3/lis_input_matrix.3 \
             doc/man/man3/lis_input_vector.3 \
             doc/man/man3/lis_matrix_assemble.3 \
             doc/man/man3/lis_matrix_convert.3 \
             doc/man/man3/lis_matrix_copy.3 \
             doc/man/man3/lis_matrix_create.3 \
             doc/man/man3/lis_matrix_destroy.3 \
             doc/man/man3/lis_matrix_duplicate.3 \
             doc/man/man3/lis_matrix_get_diagonal.3 \
             doc/man/man3/lis_matrix_get_range.3 \
             doc/man/man3/lis_matrix_get_size.3 \
             doc/man/man3/lis_matrix_get_type.3 \
             doc/man/man3/lis_matrix_malloc.3 \
             doc/man/man3/lis_matrix_scaling.3 \
             doc/man/man3/lis_matrix_set_blocksize.3 \
             doc/man/man3/lis_matrix_set_bsc.3 \
             doc/man/man3/lis_matrix_set_bsr.3 \
             doc/man/man3/lis_matrix_set_coo.3 \
             doc/man/man3/lis_matrix_set_csc.3 \
             doc/man/man3/lis_matrix_set_csr.3 \
             doc/man/man3/lis_matrix_set_dia.3 \
             doc/man/man3/lis_matrix_set_dns.3 \
             doc/man/man3/lis_matrix_set_ell.3 \
             doc/man/man3/lis_matrix_set_jad.3 \
             doc/man/man3/lis_matrix_set_msr.3 \
             doc/man/man3/lis_matrix_set_size.3 \
             doc/man/man3/lis_matrix_set_type.3 \
             doc/man/man3/lis_matrix_set_value.3 \
             doc/man/man3/lis_matrix_set_vbr.3 \
             doc/man/man3/lis_matvec.3 \
             doc/man/man3/lis_matvect.3 \
             doc/man/man3/lis_output.3 \
             doc/man/man3/lis_output_matrix.3 \
             doc/man/man3/lis_output_vector.3 \
             doc/man/man3/lis_solve.3 \
             doc/man/man3/lis_solve_kernel.3 \
             doc/man/man3/lis_solver_create.3 \
             doc/man/man3/lis_solver_destroy.3 \
             doc/man/man3/lis_solver_get_iters.3 \
             doc/man/man3/lis_solver_get_itersex.3 \
             doc/man/man3/lis_solver_get_precon.3 \
             doc/man/man3/lis_solver_get_preconname.3 \
             doc/man/man3/lis_solver_get_residualnorm.3 \
             doc/man/man3/lis_solver_get_rhistory.3 \
             doc/man/man3/lis_solver_get_solver.3 \
             doc/man/man3/lis_solver_get_solvername.3 \
             doc/man/man3/lis_solver_get_status.3 \
             doc/man/man3/lis_solver_get_time.3 \
             doc/man/man3/lis_solver_get_timeex.3 \
             doc/man/man3/lis_solver_set_option.3 \
             doc/man/man3/lis_solver_set_optionC.3 \
             doc/man/man3/lis_vector_axpy.3 \
             doc/man/man3/lis_vector_axpyz.3 \
             doc/man/man3/lis_vector_copy.3 \
             doc/man/man3/lis_vector_create.3 \
             doc/man/man3/lis_vector_destroy.3 \
             doc/man/man3/lis_vector_dot.3 \
             doc/man/man3/lis_vector_duplicate.3 \
             doc/man/man3/lis_vector_gather.3 \
             doc/man/man3/lis_vector_get_range.3 \
             doc/man/man3/lis_vector_get_size.3 \
             doc/man/man3/lis_vector_get_value.3 \
             doc/man/man3/lis_vector_get_values.3 \
             doc/man/man3/lis_vector_nrm1.3 \
             doc/man/man3/lis_vector_nrm2.3 \
             doc/man/man3/lis_vector_nrmi.3 \
             doc/man/man3/lis_vector_scale.3 \
             doc/man/man3/lis_vector_scatter.3 \
             doc/man/man3/lis_vector_set_all.3 \
             doc/man/man3/lis_vector_set_size.3 \
             doc/man/man3/lis_vector_set_value.3 \
             doc/man/man3/lis_vector_set_values.3 \
             doc/man/man3/lis_vector_xpay.3 \
             doc/man/man3/lis_wtime.3 \
             doc/man/man3/lis_esolve.3f \
             doc/man/man3/lis_esolver_create.3f \
             doc/man/man3/lis_esolver_destroy.3f \
             doc/man/man3/lis_esolver_get_esolver.3f \
             doc/man/man3/lis_esolver_get_esolvername.3f \
             doc/man/man3/lis_esolver_get_evalues.3f \
             doc/man/man3/lis_esolver_get_evectors.3f \
             doc/man/man3/lis_esolver_get_iters.3f \
             doc/man/man3/lis_esolver_get_itersex.3f \
             doc/man/man3/lis_esolver_get_residualnorm.3f \
             doc/man/man3/lis_esolver_get_rhistory.3f \
             doc/man/man3/lis_esolver_get_status.3f \
             doc/man/man3/lis_esolver_get_time.3f \
             doc/man/man3/lis_esolver_get_timeex.3f \
             doc/man/man3/lis_esolver_set_option.3f \
             doc/man/man3/lis_esolver_set_optionC.3f \
             doc/man/man3/lis_finalize.3f \
             doc/man/man3/lis_initialize.3f \
             doc/man/man3/lis_input.3f \
             doc/man/man3/lis_input_matrix.3f \
             doc/man/man3/lis_input_vector.3f \
             doc/man/man3/lis_matrix_assemble.3f \
             doc/man/man3/lis_matrix_convert.3f \
             doc/man/man3/lis_matrix_copy.3f \
             doc/man/man3/lis_matrix_create.3f \
             doc/man/man3/lis_matrix_destroy.3f \
             doc/man/man3/lis_matrix_duplicate.3f \
             doc/man/man3/lis_matrix_get_diagonal.3f \
             doc/man/man3/lis_matrix_get_range.3f \
             doc/man/man3/lis_matrix_get_size.3f \
             doc/man/man3/lis_matrix_get_type.3f \
             doc/man/man3/lis_matrix_malloc.3f \
             doc/man/man3/lis_matrix_scaling.3f \
             doc/man/man3/lis_matrix_set_blocksize.3f \
             doc/man/man3/lis_matrix_set_bsc.3f \
             doc/man/man3/lis_matrix_set_bsr.3f \
             doc/man/man3/lis_matrix_set_coo.3f \
             doc/man/man3/lis_matrix_set_csc.3f \
             doc/man/man3/lis_matrix_set_csr.3f \
             doc/man/man3/lis_matrix_set_dia.3f \
             doc/man/man3/lis_matrix_set_dns.3f \
             doc/man/man3/lis_matrix_set_ell.3f \
             doc/man/man3/lis_matrix_set_jad.3f \
             doc/man/man3/lis_matrix_set_msr.3f \
             doc/man/man3/lis_matrix_set_size.3f \
             doc/man/man3/lis_matrix_set_type.3f \
             doc/man/man3/lis_matrix_set_value.3f \
             doc/man/man3/lis_matrix_set_vbr.3f \
             doc/man/man3/lis_matvec.3f \
             doc/man/man3/lis_matvect.3f \
             doc/man/man3/lis_output.3f \
             doc/man/man3/lis_output_matrix.3f \
             doc/man/man3/lis_output_vector.3f \
             doc/man/man3/lis_solve.3f \
             doc/man/man3/lis_solve_kernel.3f \
             doc/man/man3/lis_solver_create.3f \
             doc/man/man3/lis_solver_destroy.3f \
             doc/man/man3/lis_solver_get_iters.3f \
             doc/man/man3/lis_solver_get_itersex.3f \
             doc/man/man3/lis_solver_get_precon.3f \
             doc/man/man3/lis_solver_get_preconname.3f \
             doc/man/man3/lis_solver_get_residualnorm.3f \
             doc/man/man3/lis_solver_get_rhistory.3f \
             doc/man/man3/lis_solver_get_solver.3f \
             doc/man/man3/lis_solver_get_solvername.3f \
             doc/man/man3/lis_solver_get_status.3f \
             doc/man/man3/lis_solver_get_time.3f \
             doc/man/man3/lis_solver_get_timeex.3f \
             doc/man/man3/lis_solver_set_option.3f \
             doc/man/man3/lis_solver_set_optionC.3f \
             doc/man/man3/lis_vector_axpy.3f \
             doc/man/man3/lis_vector_axpyz.3f \
             doc/man/man3/lis_vector_copy.3f \
             doc/man/man3/lis_vector_create.3f \
             doc/man/man3/lis_vector_destroy.3f \
             doc/man/man3/lis_vector_dot.3f \
             doc/man/man3/lis_vector_duplicate.3f \
             doc/man/man3/lis_vector_gather.3f \
             doc/man/man3/lis_vector_get_range.3f \
             doc/man/man3/lis_vector_get_size.3f \
             doc/man/man3/lis_vector_get_value.3f \
             doc/man/man3/lis_vector_get_values.3f \
             doc/man/man3/lis_vector_nrm1.3f \
             doc/man/man3/lis_vector_nrm2.3f \
             doc/man/man3/lis_vector_nrmi.3f \
             doc/man/man3/lis_vector_scale.3f \
             doc/man/man3/lis_vector_scatter.3f \
             doc/man/man3/lis_vector_set_all.3f \
             doc/man/man3/lis_vector_set_size.3f \
             doc/man/man3/lis_vector_set_value.3f \
             doc/man/man3/lis_vector_set_values.3f \
             doc/man/man3/lis_vector_xpay.3f \
             doc/man/man3/lis_wtime.3f

ACLOCAL_AMFLAGS = -I m4

AUTOMAKE_OPTIONS = dist-zip
